<resources>
    <string name="app_name">CST438_1_Project01_Group03</string>
    <string name="login">login</string>
    <string name="createacct">createacc</string>
    <string name="welcome">welcome</string>
    <string name="welcome1">Welcome [name]!</string>
    <string name="create">Create Account</string>
    <string name="createPageInfo">Please fill in!</string>
    <string name="username">Username</string>
    <string name="empty" />
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="login2">LogIn</string>
    <string name="logintextview" />
    <string name="TextViewTitle">Please Login</string>
    <string name="home">Home</string>
    <string name="appTitle">Job Hunt</string>
    <string name="register">Register</string>
    <string name="loginText">Log In to Your Account</string>
    <string name="createAccount">Create Account</string>
</resources>